cargo-features = ["resolver"]

[package]
name = "drone-time"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/rmja/drone-time"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = """
Uptime and DateTime for Drone OS.
"""

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
systick = ["drone-cortexm"]
systick-experimental = ["drone-cortexm"]
stm32 = ["drone-stm32-map"]
std = [
    "drone-core/std",
    "drone-cortexm/std",
]

[dependencies]
drone-core = { version = "0.14.0", path = "../drone-core" }
drone-cortexm = { version = "0.14.0", path = "../drone-cortexm", optional = true }
drone-stm32-map = { version = "0.14.0", features = ["tim"], path = "../drone-stm32-map", optional = true }
futures = { version = "0.3.0", default-features = false }
async-trait = "0.1"
atomicbox = { git="https://github.com/rmja/atomicbox" }

[dev-dependencies]
futures-await-test = "0.3.0"