cargo-features = ["resolver"]

[package]
name = "uptime"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "uptime"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-stm32-map/std",
    "futures/std",
]

[dependencies]
drone-core = { version = "0.14.0", path = "../../../drone-core" }
drone-cortexm = { version = "0.14.0", features = ["bit-band", "floating-point-unit", "memory-protection-unit"], path = "../../../drone-cortexm" }
drone-stm32-map = { version = "0.14.0", features = ["adc", "dma", "exti", "gpio", "i2c", "tim"], path = "../../../drone-stm32-map" }
drone-stm32f4-hal = { version = "0.1.0", features = ["rcc"], path="../../../drone-stm32f4-hal" }
futures = { version = "0.3.0", default-features = false }
drone-time = { path = "../.." }

[profile.release]
lto = true
debug = true
panic = "abort"
